--- a/src/index.css
+++ b/src/index.css
@@ -81,3 +81,9 @@ code {
     justify-content: center;
     align-items: center;
 }
+.button{
+  display:flex;
+  flex-direction:row ;
+  width:50% ;
+  justify-content:space-evenly;
+}
